# gobattledex

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  fly.toml  manage.py  package.json  pyproject.toml  requirements.in  requirements.nohash.in  requirements.txt
.bin/: release.sh  web.sh  worker.sh
.copier/: project.yml
.github/: dependabot.yml
.github/workflows/: deploy.yml  projects.yml  test.yml
certs/: pvp.tools.dev.crt  pvp.tools.dev.key
config/: .env.template  __init__.py  api.py  asgi.py  gunicorn.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  settings.py  test.py
docker/: ci  docker-compose.prod.yaml  docker-compose.prod.yml  docker_compose.prod.yaml  entrypoint  start  start-dev
docker/django/: Dockerfile
docker/postgres/: Dockerfile
docs/: Makefile  conf.py
gbd/core/: apps.py  models.py  views.py
gbd/gamemaster/: admin.py  api.py  apps.py  models.py  urls.py  views.py
gbd/gamemaster/migrations/: 0001_initial.py
gbd/templates/: base.html
gbd/templates/.well-known/: security.txt
gbd/users/: apps.py
pvpogo_tools/: __init__.py  asgi.py  settings.py  wsgi.py
pvpogo_tools/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
pvpogo_tools/core/: apps.py
pvpogo_tools/users/: apps.py
scripts/: create_dev_database.sql
server/templates/txt/: humans.txt
templates/: base.html
tests/: test_version.py
